fix round 12: HowItWorks photo en img tag (visible en headless)

--- a/components/HowItWorksSection/HowItWorksSection.module.css
+++ b/components/HowItWorksSection/HowItWorksSection.module.css
@@ -6,15 +6,15 @@
   overflow: hidden;
 }
 
-.bgImage {
+.bgImageEl {
   position: absolute;
   top: 0;
   left: 0;
-  width: 50%;
+  width: 45%;
   height: 100%;
-  background-image: url('https://www.immovendetbien.com/wp-content/uploads/2024/05/trouver_un_conceiller_1.jpg');
-  background-size: cover;
-  background-position: center;
+  object-fit: cover;
+  object-position: center;
+  display: block;
 }
 
 .overlay {
